--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1>Welcome to Mollies Grill</h1>
-<p>Order kebabs, burgers, pizzas, sides, drinks & more!</p>
+<p>Come and get kebabs, burgers, pizzas and more!</p>
 
 <a class="btn" href="{{ url_for('menu') }}">View Menu</a>
 
